# mdtools

./: .editorconfig  .flake8  .gitattributes  .gitignore  .mdlrc  .mdlstyle.rb  .pre-commit-config.yaml  .readthedocs.yaml  .shellcheckrc  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  README.rst  TODO.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_2021-05-10.txt  requirements_python3.8.10.txt  requirements_python3.8.5.txt  setup.cfg  setup.py  shellcheckrc
.github/: dependabot.yml  pr-labeler-config-v0.yml  pr-labeler-config-v1.yml  pull_request_template.md  release.yml  test-pr-labeler.txt
.github/ISSUE_TEMPLATE/: bug-report-core-package.md  bug-report-general.md  bug-report-scripts.md  bug_report.yml  config.yml  documentation_request.yml  feature-request-core-package.md  feature-request-general.md  feature-request-scripts.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull-request.md  pull_request_template.md
.github/workflows/: cff-validator-skip.yml  cff-validator.yml  codeql-analysis.yml  pr-labeler.yml  publish.yml  tests-skip.yml  tests.yml
docs/: Makefile  README.rst  mdtools_introduction.pptx  requirements-docs.txt  requirements-rtd.txt  requirements.txt
docs/logo/: mdtools_favicon_4000x4000.tiff  mdtools_logo_and_label_final_200x200.tiff  mdtools_logo_and_label_final_4000x4000.tiff  mdtools_logo_and_label_stage1_4000x4000.tiff
docs/source/: conf.py  index.rst
mdtools/: __init__.py  _metadata.py  box.py  box.py.wrong_unwrap  check.py  dtrj.py  dynamics.py  dynamics.py.bak_2020-08-15  dynamics.py.bak_2021-06-22  file_handler.py  functions.py  markov_state_modeling.py  numpy_helper_functions.py  parallel.py  plot.py  run_time_info.py  scipy_helper_functions.py  select.py  statistics.py  structure.py  structure.py.bak_2021-03-29  version.py
misc/: README.rst  compare_dtrj_lifetime_methods.py  compare_mplstyles.py  generate_dtrj.py  unwrapping.ods
misc/dtrj_lifetimes/: compare_dtrj_lifetime_methods.py  generate_dtrj.py  plot_gengamma.py  plot_lifetime_distributions.py  plot_lifetimes.py
scripts/: script_template.py  script_template_dtrj.py  script_template_plot.py
scripts/discretization/: back_jump_prob.py  back_jump_prob_discrete.py  correct_intermittent_dtrj.py  discrete_coord.py  discrete_hex.py  discrete_pos.py  discrete_pos.py.bak_2020-10-05_for_mm  discrete_pos.py.bak_2020-11-17_for_mm  discrete_pos.py.bak_2021-04-20_for_mm  discrete_pos.py.bak_2021-04-30  kaplan_meier.py  kaplan_meier_discrete.py  plot_discrete_hex_traj.py  plot_discrete_hex_trj.py  plot_discrete_pos_traj.py  plot_discrete_pos_traj.py.bak_2020-11-17  plot_discrete_pos_trj.py  plot_state_decay.py  plot_state_decay_discrete.py  plot_state_lifetime.py  plot_state_lifetime_autocorr.py  plot_state_lifetime_autocorr_discrete.py  plot_state_lifetime_discrete.py  plot_trans_per_state_vs_time.py  state_decay.py  state_decay.py.bak_2020-10-15  state_decay.py.wrong_2020-10-18  state_decay_discrete.py  state_decay_discrete.py.bak_2020-10-21  state_decay_fast.py.redundant_2020-10-18  state_lifetime.py  state_lifetime_autocorr.py  state_lifetime_autocorr.py.bak_2020-11-30  state_lifetime_autocorr.py.bak_2020-12-01  state_lifetime_autocorr.py.bak_2020-12-02  state_lifetime_autocorr_discrete.py  state_lifetime_discrete.py  state_probs_around_trans.py  state_probs_around_trans.py.bak_2021-04-22  state_probs_around_trans.py.bak_2021-04-30  (+1 more)
scripts/dynamics/: extract_renewal_events.py  extract_renewal_events.py.bak_2020-09-11  extract_renewal_events.py.bak_2020-10-07  extract_renewal_events.py.bak_2020-10-12  fit_msd.py  lifetime_autocorr.py.bak_2020-08-10  lifetime_autocorr_parallel.py  lifetime_autocorr_serial.py  lifetime_hist.py.bak_2020-08-10  lifetime_hist_parallel.py  lifetime_hist_serial.py  msd_at_coord_change.py  msd_layer_parallel.py  msd_layer_serial.py  msd_layer_serial.py.bak_2020-10-02  msd_parallel.py  msd_serial.py  plot_msd_layer.py  plot_msd_layer_cross_section_at_constant_time.py  plot_msd_layer_cross_section_xyz_at_constant_msd.py  plot_msd_layer_cross_section_xyz_at_constant_time.py  plot_msd_layer_heatmap.py  plot_renewal_events_displ_hist.py  plot_renewal_events_displ_vs_post0.py  plot_renewal_events_displ_vs_trenew_binned.py  plot_renewal_events_displa_vs_displb.py  plot_renewal_events_msd_vs_post0.py  plot_renewal_events_msd_vs_trenew.py  plot_renewal_events_msd_vs_trenew_binned.py  plot_renewal_events_msda_vs_msdb.py  plot_renewal_events_nevents_vs_post0.py  plot_renewal_events_post0_vs_postrenew.py  plot_renewal_events_postrenew_vs_post0.py  plot_renewal_events_ref_dist.py  plot_renewal_events_t0_vs_trenew.py  plot_renewal_events_transition_matrix.py  plot_renewal_events_transition_matrix_pyemma.py  plot_renewal_events_trenew_hist.py  plot_renewal_events_trenew_vs_post0.py
scripts/gmx/: plot_ener_dist.py  plot_energy_dist.py
scripts/markov_modeling/: cktest.py  cktest.py.bak_2020-06-30  its_divergence.py  plot_its.py  plot_mm.py  plot_mm_eigvec.py  plot_mm_rate_vs_dist.py  plot_mm_rate_vs_state.py  plot_stat_dist_and_density_profile.py  plot_tm_diff.py  plot_tm_diff.py.bak_2020-06-30  propagate.py  pyemma_cktest.py  pyemma_its.py  pyemma_mm.py  pyemma_plot_cktest.py  pyemma_plot_its.py
scripts/other/: attribute_hist.py  numpy_archive.py  plot_attribute_hist.py
scripts/structure/: axial_hex_distribution.pptx  axial_hex_distribution_1nn.py  axial_hex_distribution_2nn.py  contact_hist.py  contact_hist_at_pos_change.py  contact_hist_deprecated.py  contact_hist_deprecated.py.bak_2021-03-03_wrong_normalization  contact_hist_deprecated.py.bak_2021-04-05  densmap.py  gmx_densmap_hex_cross_sections.py  gmx_densmap_hex_cross_sections.py.bak_2020-10-27  gmx_densmap_hex_cross_sections.py.bak_2020-10-28  gmx_densmap_hex_cross_sections.py.bak_2020-10-30  lig_change_at_pos_change.py  lig_change_at_pos_change_blocks.py  lig_change_at_pos_change_blocks.py.bak  lig_change_at_pos_change_blocks.py.bak_2021-06-08  lig_change_at_pos_change_blocks_hist.py  plot_gmx_densmap.py  rmsd_trj_trj.py  (+7 more)
styles/: compare_mplstyles.py  mdtools.mplstyle
(+70 files in other folders)
