# Configuration file for Python projects.
# See
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://peps.python.org/pep-0621/#example

[build-system]
# setuptools version 59.6.0 is the last version supporting Python 3.6.
requires = ["setuptools >=59.0, <72.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
# B101: Use of assert detected.
# B404: Consider possible security implications associated with the subprocess module
# B603: subprocess call - check for execution of untrusted input.
skips = ["B101", "B404", "B603"]

[tool.black]
required-version = 23
line-length = 79
target-version = ["py39"]

[tool.isort]
# profile should go on top so that it does not overwrite other settings.
profile = "black"
# Comments to put above import sections.
import_heading_future = "Future imports"
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "Third-party libraries"
import_heading_firstparty = "First-party libraries"
import_heading_localfolder = "Local imports"
known_local_folder = [
    "axial_hex_distribution_1nn",
    "lifetime_autocorr_serial",
    "msd_at_coord_change",
    "msd_layer_serial",
    "msd_serial",
]
line_length = 79
# Number of blank lines around import statements.
lines_before_imports = 2
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
# Ignore files listed in .gitignore.
skip_gitignore = true
